@startuml

title __CHATROOM & MESSAGES's Class Diagram__\n

package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.model {
    package ca.ualberta.CMPUT3012019T02.alexandria.model.chatroom {
      class ChatRoomItem {
        - chatId : String
        - user1Id : String
        - user1Name : String
        - user1UserPic : String
        - user2Id : String
        - user2Name : String
        - user2UserPic : String
        - readStatus : boolean
        + ChatRoomItem()
        + ChatRoomItem()
        + toMap()
        + getUser1Id()
        + setUser1Id()
        + getUser1Name()
        + setUser1Name()
        + getUser1UserPic()
        + setUser1UserPic()
        + getUser2Id()
        + setUser2Id()
        + getUser2Name()
        + setUser2Name()
        + getUser2UserPic()
        + setUser2UserPic()
        + getChatId()
        + setChatId()
        + getReadStatus()
        + setReadStatus()
      }
    }
  }
}

package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.model {
    package ca.ualberta.CMPUT3012019T02.alexandria.model.message {
      class ImageMessage {
        + ImageMessage()
        + getImage()
        + setImage()
      }
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.model {
    package ca.ualberta.CMPUT3012019T02.alexandria.model.message {
      class LocationMessage {
        - imageId : String
        + LocationMessage()
        + getLocation()
        + setLocation()
        + getImageId()
        + setImageId()
      }
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.model {
    package ca.ualberta.CMPUT3012019T02.alexandria.model.message {
      abstract class Message {
        - id : String
        - type : String
        - content : String
        - status : String
        - date : Long
        - sender : String
        + Message()
        + Message()
        + toMap()
        + getId()
        + setId()
        + getType()
        + setType()
        + getContent()
        + setContent()
        + getStatus()
        + setStatus()
        + getDate()
        + setDate()
        + getSender()
        + setSender()
      }
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.model {
    package ca.ualberta.CMPUT3012019T02.alexandria.model.message {
      class TextMessage {
        + TextMessage()
        + TextMessage()
        + getText()
        + setText()
      }
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.model {
    class Location {
      - latitude : double
      - longitude : double
      + Location()
      + getLatitude()
      + setLatitude()
      + getLongitude()
      + setLongitude()
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.model {
    package ca.ualberta.CMPUT3012019T02.alexandria.model.user {
      class User {
        - chatRoomList : Map<String, ChatRoomItem>
        - ownedBooks : Map<String, OwnedBook>
        - borrowedBooks : Map<String, BorrowedBook>
        - userProfile : UserProfile
        - id : String
        + User()
        + getChatRoomList()
        + getOwnedBooks()
        + getBorrowedBooks()
        + getProfile()
        + getId()
      }
    }
  }
}

ImageMessage -up-|> Message
LocationMessage -up-|> Message
LocationMessage o-- Location : location
TextMessage -up-|> Message
ChatRoomItem "1" -- "*" Message : associated with >
ChatRoomItem "1" -- "2" User : associated with >


right footer


  PlantUML diagram partly generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
  For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
